# multimodal-drone-detection

./: .env.example  .gitignore  README.md  docker-compose-dev.yml  docker-compose.jetson.yaml  index.html  mediamtx.yml  pyproject.toml  ruff.toml
.github/: release.yml
.github/workflows/: ci-checks.yml  publish-images.yml  release.yml
backend/: Dockerfile  detections.http  pyproject.toml
backend/src/app/: database.py  main.py  schemas.py
backend/src/app/api/routers/: detections.py  health.py  streams.py
backend/src/app/database/: database.py  schemas.py
backend/src/app/models/: __init__.py  detection.py
backend/src/app/repositories/: __init__.py  detection_repository.py
backend/src/multimodal_drone_detection_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/tests/: conftest.py  test_main.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/incidents/: page.tsx
frontend/src/app/live-feed/: page.tsx
frontend/src/components/: theme-provider.tsx
jetson/: .env  Dockerfile  README.md  pyproject.toml
jetson/src/: run_both.py
jetson/src/ml/fusion/: README.md  __init__.py  config.py  fusion_core.py  schemas.py  test_ingest_contract.py  transport_stub.py
jetson/src/sensor_ingestion/: __init__.py  ingest_gi.py  shared_buffer.py
offline_ml/: README.md  environment.yml
offline_ml/notebooks/: train.ipynb
offline_ml/runs/thermal_no_augmentation_baseline/: args.yaml  results.csv
offline_ml/runs/visual_no_augmentation_baseline/: args.yaml  results.csv
offline_ml/tests/: test_setup.py
simulator/: Dockerfile
sql/: Dockerfile  README.md  init.sql  schema-diagram.md
(+8 files in other folders)
