[project]
name = "multimodal-drone-detection-backend"
version = "0.1.0"
description = "Backend of multimodal drone detection"
readme = "README.md"
requires-python = ">=3.12"

# Add more as needed
dependencies = ["fastapi>=0.129.0", "uvicorn[standard]>=0.40.0"]

[dependency-groups]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]
