[project]
name = "multimodal-drone-detection-si-ml"
version = "0.1.0"
description = "Sensor ingestion and ML pipeline for multimodal drone detection"
readme = "README.md"
requires-python = ">=3.6,<3.7" # this needs to run on JetPack 4.6.1 which ships with 3.6

# Add more as needed
dependencies = [
    "numpy>=1.19.5,<1.20",
    "aioprocessing>=2.0.0",
    "torchsummary>=1.5.1",
]